# oxygine-googleplay

./: .gitignore  .hgignore  Android.mk  CMakeLists.txt  README.md
android/: AndroidManifest.xml  build.gradle  build.xml
android/src/org/oxygine/googleplay/: AuthAdapter.java  FirebaseAdapter.java  Google.java  GooglePlayAdapter.java  InterstitialAdapter.java  RewardedAdapter.java
proj.ios/oxygine-googleplay.xcodeproj/: project.pbxproj
proj.ios/oxygine-googleplay.xcodeproj/project.xcworkspace/xcuserdata/qvadro.xcuserdatad/: UserInterfaceState.xcuserstate
proj.ios/oxygine-googleplay.xcodeproj/xcuserdata/qvadro.xcuserdatad/xcschemes/: oxygine-googleplay.xcscheme  xcschememanagement.plist
src/: googleplay.cpp  googleplay.h
src/android/: AndroidGooglePlay.cpp  AndroidGooglePlay.h
src/ios/: iosGooglePlay.h  iosGooglePlay.mm
src/sim/: GooglePlaySimulator.cpp  GooglePlaySimulator.h
